Added Line Renderer and Lookatobjects

--- a/DM-Production-Week5/Assembly-CSharp.csproj
+++ b/DM-Production-Week5/Assembly-CSharp.csproj
@@ -70,6 +70,7 @@
     <Compile Include="Assets\Scripts\EconomyWithEvent.cs" />
     <Compile Include="Assets\Scripts\EventReceiver.cs" />
     <Compile Include="Assets\Scripts\EventWhenObjectReachesPosition.cs" />
+    <Compile Include="Assets\Scripts\LinerRenderedWayPoints.cs" />
     <Compile Include="Assets\Scripts\Lookat.cs" />
     <Compile Include="Assets\Scripts\MathsHelpers.cs" />
     <Compile Include="Assets\Scripts\ModifyEconomy.cs" />
